04-network-automation/cts-aws/aws-cts.tf
resource "random_id" "server" {
  byte_length = 4
}


resource "aws_network_interface" "foo" {
  subnet_id   = var.aws_subnet

  tags = {
    Name = "primary_network_interface${random_id.server.hex}"
  }
}

resource "aws_instance" "cts-server" {
  ami                    = "ami-0a59f0e26c55590e9"
  instance_type          = "t2.medium"
  subnet_id              = var.aws_subnet
  vpc_security_group_ids = [aws_security_group.awscts.id]
  
  network_interface {
    network_interface_id = aws_network_interface.foo.id
    device_index         = 0
  }
  user_data              = base64encode(templatefile("${path.module}/scripts/aws-consul-tf-sync.sh", { 
    consul_server_ip = var.consul_server_ip,
    vault_token = "root", 
    vault_addr = var.vault_addr, 
    CONSUL_VERSION = "1.12.2",
    CTS_CONSUL_VERSION = "0.7.0",
    CONSUL_URL = "https://releases.hashicorp.com/consul-terraform-sync",
    owner = var.owner,
    panos_mgmt_addr =  var.panos_mgmt_addr,
    local_ipv4 = aws_network_interface.foo.private_ip
  }))

  key_name               = aws_key_pair.demo.key_name
  associate_public_ip_address = true
  tags = {
    Name = "${var.owner}-aws-cts-server${random_id.server.hex}"
  }
}

resource "tls_private_key" "demo" {
  algorithm = "RSA"
}

resource "aws_key_pair" "demo" {
  public_key = tls_private_key.demo.public_key_openssh

}

resource "null_resource" "key" {
  provisioner "local-exec" {
    command = "echo \"${tls_private_key.demo.private_key_pem}\" > ${aws_key_pair.demo.key_name}.pem"
  }

  provisioner "local-exec" {
    command = "chmod 600 *.pem"
  }

  provisioner "local-exec" {
    when    = destroy
    command = "rm -f *.pem"
  }


}



resource "aws_security_group" "awscts" {
  name   = "awscts"
  vpc_id = var.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 8558
    to_port     = 8558
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 8500
    to_port     = 8500
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
